commit capa testing terminada